--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -32,10 +32,10 @@
         <a href="{{html_url}}" target="_blank">
           <h3>{{}}</h3>
         </a>
-        <p>Description: {{}}</p>
-        <p>Language: {{}}</p>
-        <p>Created: {{}}</p>
-        <p>Last updated: {{}}</p>
+        <p>Description: {{description}}</p>
+        <p>Language: {{language}}</p>
+        <p>Created: {{created_at}}</p>
+        <p>Last updated: {{updated_at}}</p>
         {{#if watchers_count}}
           <p>{{watchers_count}} watching this repo</p>
         {{/if}}
@@ -110,7 +110,7 @@
     <script src="/scripts/controllers/articleController.js"></script>
 
     <!-- TODO: Be sure to include any new script files: -->
-  
+
     <script src="/scripts/controllers/routes.js"></script>
   </body>
 </html>
