--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -110,7 +110,10 @@
     <script src="/scripts/controllers/articleController.js"></script>
 
     <!-- TODO: Be sure to include any new script files: -->
-  
+    <script src="/scripts/models/repo.js"></script>
+    <script src="/scripts/views/repoView.js"></script>
+    <script src="/scripts/controllers/aboutController.js"></script>
+
     <script src="/scripts/controllers/routes.js"></script>
   </body>
 </html>
