--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -102,15 +102,18 @@
     <script src="/vendor/scripts/page.js"></script>
 
     <!-- Your secret GitHub token file should be added into your .gitignore file, therefore recreated on every developer's environment. -->
-    <script src="/scripts/models/githubToken.js"></script>
+    <!-- <script src="/scripts/models/githubToken.js"></script> -->
 
     <!-- Script files for the Article resource: -->
     <script src="/scripts/models/article.js"></script>
     <script src="/scripts/views/articleView.js"></script>
     <script src="/scripts/controllers/articleController.js"></script>
+    <script src="/scripts/controllers/aboutController.js">
 
+    </script>
     <!-- TODO: Be sure to include any new script files: -->
-  
+    <script src="/githubToken.js"></script>
+    <script src="/scripts/models/repo.js"></script>
     <script src="/scripts/controllers/routes.js"></script>
   </body>
 </html>
