API request works!

--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -110,7 +110,12 @@
     <script src="/scripts/controllers/articleController.js"></script>
 
     <!-- TODO: Be sure to include any new script files: -->
-  
+    <script src="/scripts/models/repo.js" charset="utf-8"></script>
+    <script src="/scripts/views/repoView.js" charset="utf-8"></script>
+    <script src="/scripts/views/adminView.js" charset="utf-8"></script>
+    <script src="/scripts/views/newArticle.js" charset="utf-8"></script>
+    <script src="/scripts/controllers/aboutController.js" charset="utf-8"></script>
+
     <script src="/scripts/controllers/routes.js"></script>
   </body>
 </html>
