--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -30,7 +30,7 @@
     <script id="repo-template" type="text/x-handlebars-template">
       <li>
         <a href="{{html_url}}" target="_blank">
-          <h3>{{}}</h3>
+          <h3>{{repo.name}}</h3>
         </a>
         <p>Description: {{}}</p>
         <p>Language: {{}}</p>
@@ -110,7 +110,9 @@
     <script src="/scripts/controllers/articleController.js"></script>
 
     <!-- TODO: Be sure to include any new script files: -->
-  
+    <script src="/scripts/models/repo.js"></script>
+    <script src="/scripts/views/repoView.js"></script>
+    <script src="/scripts/controllers/aboutController.js"></script>
     <script src="/scripts/controllers/routes.js"></script>
   </body>
 </html>
