--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -30,7 +30,7 @@
     <script id="repo-template" type="text/x-handlebars-template">
       <li>
         <a href="{{html_url}}" target="_blank">
-          <h3>{{repo.name}}</h3>
+          <h3>{{name}}</h3>
         </a>
         <p>Description: {{description}}</p>
         <p>Language: {{language}}</p>
