--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -56,7 +56,7 @@
           <li class="tab" data-content="articles"><a href="/" class="icon-home"> Home</a></li>
           <li class="tab" data-content="about"><a href="/about" class="icon-address-book"> About</a></li>
           <li><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
-          <li><a href="http://github.com/brookr" target="_blank" class="icon-github"> GitHub</a></li>
+          <li><a href="/repos" target="_blank" class="icon-github"> GitHub</a></li>
         </ul>
       </nav>
     </header>
@@ -110,7 +110,9 @@
     <script src="/scripts/controllers/articleController.js"></script>
 
     <!-- TODO: Be sure to include any new script files: -->
-  
+    <script src="/scripts/models/repo.js"></script>
+    <script src="/scripts/views/repoView.js"></script>
+
     <script src="/scripts/controllers/routes.js"></script>
   </body>
 </html>
