--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -30,17 +30,11 @@
     <script id="repo-template" type="text/x-handlebars-template">
       <li>
         <a href="{{html_url}}" target="_blank">
-          <h3>{{}}</h3>
+          <h2>Repo Name: {{name}}</h2>
         </a>
-        <p>Description: {{}}</p>
-        <p>Language: {{}}</p>
-        <p>Created: {{}}</p>
-        <p>Last updated: {{}}</p>
-        {{#if watchers_count}}
-          <p>{{watchers_count}} watching this repo</p>
-        {{/if}}
-      </li>
-    </script>
+        <p>Git ID: {{id}}</p>
+      </script>
+
   </head>
   <body>
     <header class="site-header clearfix">
@@ -112,7 +106,8 @@
     <!-- TODO: Be sure to include any new script files: -->
     <script src="/scripts/models/repo.js"></script>
     <script src="/scripts/views/repoView.js"></script>
-
+    <script src="/scripts/controllers/aboutController.js"></script>
     <script src="/scripts/controllers/routes.js"></script>
+
   </body>
 </html>
